GNOME Bugzilla – Bug 643807
doesn't handle change of directories well
Last modified: 2013-02-17 12:10:24 UTC
[notting@nostromo: /usr/local/Videos]$ totem ck1.mp3 & <starts, plays> [notting@nostromo: /usr/local/Videos]$ cd tivo/ [notting@nostromo: /usr/local/Videos/tivo]$ ls -l HAfFfqiYLp0.mp4 -rw-rw-r--. 1 notting notting 179163404 Feb 23 23:46 HAfFfqiYLp0.mp4 [notting@nostromo: /usr/local/Videos/tivo]$ totem HAfFfqiYLp0.mp4 ** Message: Error: Resource not found. gstfilesrc.c(1034): gst_file_src_start (): /GstPlayBin2:play/GstURIDecodeBin:uridecodebin0/GstFileSrc:source: No such file "/usr/local/Videos/HAfFfqiYLp0.mp4" totem-2.91.7-1.fc15.x86_64
I think I'll reassign this to glib. GtkApplication has no way for us to handle this, as the command-line is always processed in the remote instance, never in the one we run.
G_APPLICATION_HANDLES_OPEN would handle this for you if all your commandline arguments are always going to be files. Otherwise, you'll have to override local_commandline and do it yourself.
*** Bug 667658 has been marked as a duplicate of this bug. ***
commit 6299d99a05f14d1454766e2f5983f34e83bdf988 Author: Bastien Nocera <hadess@hadess.net> Date: Thu Mar 29 01:29:13 2012 +0200 main: Handle relative paths to a local instance https://bugzilla.gnome.org/show_bug.cgi?id=643807
*** Bug 682581 has been marked as a duplicate of this bug. ***
*** Bug 687208 has been marked as a duplicate of this bug. ***
*** Bug 694017 has been marked as a duplicate of this bug. ***