main: Handle relative paths to a local instance

https://bugzilla.gnome.org/show_bug.cgi?id=643807